--- a/src/components/ui/Instrumento/Instrumento.module.css
+++ b/src/components/ui/Instrumento/Instrumento.module.css
@@ -11,15 +11,21 @@
     padding:1rem;
     width: 50vw;
     border-radius: 1rem;
-    transition: 0.1s ease-in-out;
+    transition: color 0.1s;
 }
 .containerInstrumento:hover {
     cursor:pointer;
     color:rgb(25, 125, 255);
 }
 
+.imgContainer {
+    max-width: 10rem;
+    max-height: 10rem;
+}
+
 .instrumentoImg {
-    object-fit: none;
+    max-width: 10rem;
+    max-height: 10rem;
 }
 
 .instrumentoTitle {
