--- a/src/components/screens/Search/Search.module.css
+++ b/src/components/screens/Search/Search.module.css
@@ -1,12 +1,16 @@
-.containerInstrumentosList {
+.listSearchContainer {
     background-color: whitesmoke;
+    width: 100%;
     display:flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
+    
 
 }
 
-.messageList {
-    font-size: 2rem;
+.formContainer {
+    width: 80vw;
+    margin-top:1rem;
+    
+
 }
