--- a/src/components/ui/Topbar/Topbar.module.css
+++ b/src/components/ui/Topbar/Topbar.module.css
@@ -3,7 +3,7 @@
     position: sticky;
     width: 100%;
     top: 0;
-    z-index: 1000; 
+    z-index: 1000;
     background-color: rgb(224, 224, 224);
     padding: 0.5rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -11,9 +11,9 @@
 }
 
 .navbar {
-    margin-left:2rem;
-    display:flex;
-    justify-content:flex-start;
+    margin-left: 2rem;
+    display: flex;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -24,19 +24,22 @@
 
 .navbarLinks {
     list-style: none;
-    display:flex;
-    gap:15px;
-    margin:1rem;
+    display: flex;
+    gap: 15px;
+    margin: 1rem;
 }
 
-.navbarLinks li a{
+.navbarLinks li,
+.navbarLinks li a {
     color: rgb(48, 48, 48);
     text-decoration: none;
     font-size: 1.2rem;
     font-weight: 400;
     transition: color 0.1s;
-  }
-  
-  .navbarLinks li a:hover {
+}
+
+.navbarLinks li:hover,
+.navbarLinks li a:hover {
+    cursor: pointer;
     color: rgb(150, 150, 150);
-  }
+}
