--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
   }
   
   #root {
